@@ -16,6 +16,7 @@ Engine features:
 * Added 'render_layers' section to StatBlock definitions. It has the same syntax and functionality as engine/hero_layers.txt, so that file is now considered deprecated.
 * Added 'animation_slots' section to StatBlock definitions. This allows for multiple animation layers on non-player entities that don't have an inventory like the player.
 * Added a 'direction' property to map NPCs, indentical to the property of the same name for map enemies.
+* Added 'vendor_ratio_buy', 'vendor_ratio_sell', and 'vendor_ratio_sell_old' properties to engine/loot.txt. These deprecate 'vendor_ratio' and 'vendor_ratio_buyback'.
 
 Engine fixes:
 
